# gulde-shell

./: .gitignore  CMakeLists.txt  LICENSE  README.md  program.sh  run_tests.sh  vcpkg.json
.github/workflows/: ci.yml
src/: command.h  command_dispatcher.c  command_dispatcher.h  command_registry.c  command_registry.h  input_parser.c  input_parser.h  main.c  shell.c  shell.h
tests/: test_main.c
